--- a/Data_Augment.ipynb
+++ b/Data_Augment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,12 +34,12 @@
     "\n",
     "nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize"
+    "from nltk.tokenize import word_tokenize, TreebankWordDetokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,42 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_aug(n, N, train_df, aug, output_fname, path='') :\n",
-    "    train_df_sample = train_df.sample(n=N, ignore_index=True)\n",
-    "    #save sample as file\n",
-    "    train_df_sample.to_csv(path + output_fname[:-4] + \"original.csv\".format(N=N), sep=\",\")\n",
-    "\n",
-    "    #aug.augment(data, n)\n",
-    "    augmented_data_sentences = []\n",
-    "    augmented_data_labels = []\n",
-    "\n",
-    "    for idx, row in train_df_sample.iterrows() :\n",
-    "        sentence = row['text']\n",
-    "        label = row['label']\n",
-    "        augmented = aug.augment(sentence, n=n) if n > 1 else [aug.augment(sentence, n=n)]\n",
-    "\n",
-    "        #label-preserving\n",
-    "        augmented_data_sentences += ([sentence] + augmented)\n",
-    "        augmented_data_labels += [label for i in range(n+1)]\n",
-    "    \n",
-    "    #save new dataset to csv-file\n",
-    "    output_df = pd.DataFrame(list(zip(augmented_data_sentences, augmented_data_labels)), columns=['text', 'label'])\n",
-    "    output_df.to_csv(path + output_fname, sep=\",\")\n",
-    "\n",
-    "    return path + output_fname"
+    "def augment_sent(sentence, aug, n, profanities) :\n",
+    "    augmented_sents = []\n",
+    "    sent_tokenized = word_tokenize(sentence)\n",
+    "    for i in range(n) :\n",
+    "        #augmented = \" \".join([aug.augment(word, n=1) if word in set(profanities) else word for word in sent_tokenized])\n",
+    "        augmented = TreebankWordDetokenizer().detokenize([aug.augment(word, n=1) if word in set(profanities) else word for word in sent_tokenized])\n",
+    "        augmented_sents.append(augmented)\n",
+    "    return augmented_sents"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_aug_multiple(n, N, train_df, augs, R, output_fname, path='') :  #Using Multiple Augmenters\n",
+    "def run_aug_multiple(n, N, train_df, augs, R, output_fname, profanities, path='', add_original=True) :  #Using Multiple Augmenters\n",
     "    train_df_sample = train_df.sample(n=N, ignore_index=True)\n",
     "    #save sample as file\n",
     "    train_df_sample.to_csv(path + output_fname[:-4] + \"original.csv\".format(N=N), sep=\",\")\n",
@@ -150,12 +135,18 @@
     "        augmented = []\n",
     "\n",
     "        for r, aug in zip(R, augs) :\n",
-    "            sents = aug.augment(sentence, n=r) #if r > 1 else [aug.augment(sentence, n=r)]\n",
-    "            augmented.append(sents)\n",
+    "            #sents = aug.augment(sentence, n=r) #if r > 1 else [aug.augment(sentence, n=r)]\n",
+    "            sents = augment_sent(sentence, aug, n=r, profanities=profanities)\n",
+    "            #augmented.append(sents)\n",
+    "            augmented += sents\n",
     "\n",
     "        #label-preserving\n",
-    "        augmented_data_sentences += ([sentence] + augmented)\n",
-    "        augmented_data_labels += [label for i in range(n+1)]\n",
+    "        if add_original :\n",
+    "            augmented_data_sentences += ([sentence] + augmented)\n",
+    "            augmented_data_labels += [label for i in range(n+1)]\n",
+    "        else :\n",
+    "            augmented_data_sentences += augmented\n",
+    "            augmented_data_labels += [label for i in range(n)]\n",
     "    \n",
     "    #save new dataset to csv-file\n",
     "    output_df = pd.DataFrame(list(zip(augmented_data_sentences, augmented_data_labels)), columns=['text', 'label'])\n",
@@ -166,27 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Data augmentation : Single\n",
-    "# stop_words = list(set(stopwords.words('english')))\n",
-    "# aug_spelling_prof = naw.SpellingAug(dict_path=fname_profanity, aug_max=None, aug_p=0.5, stopwords=stop_words)\n",
-    "\n",
-    "# fnames = [(\"Dataset_aug_profanity_{i}_.csv\").format(i=i) for i in [500, 1000, 5000, len(train_df_prof)]]\n",
-    "# output_path = \"augmented_data/\"\n",
-    "\n",
-    "# for fname in fnames :\n",
-    "#     tokens = fname.split(\"_\")\n",
-    "#     N = int(tokens[3])\n",
-    "#     print(\"Augmenting - N : {N}\".format(N=N))\n",
-    "#     run_aug(5, N, train_df_prof, aug_spelling_prof, fname, path=output_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +192,26 @@
     "    tokens = fname.split(\"_\")\n",
     "    N = int(tokens[3])\n",
     "    print(\"Augmenting (Multiple-Augmenters) - N : {N}\".format(N=N))\n",
-    "    #run_aug_multiple(5, N, train_df_prof, augs, R, fname, path=output_path)\n",
-    "    run_aug(1, N, train_df_prof, augs[2], fname, path=output_path)"
+    "    run_aug_multiple(len(augs[2:3]), N, train_df_prof, augs[2:3], R[2:3], fname, profanities, path=output_path, add_original=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6513 13026\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_aug_df = pd.read_csv('augmented_data/Dataset_aug_complex_6513_.csv',sep=',')\n",
+    "sample_original_df = pd.read_csv('augmented_data/Dataset_aug_complex_6513_original.csv',sep=',')\n",
+    "print(len(sample_original_df), len(sample_aug_df))"
    ]
   }
  ],
