--- a/Test_2.ipynb
+++ b/Test_2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,11 +19,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "id": "YHWRrOYpuyPV"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/cwwojin/opt/anaconda3/envs/cwwojin/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -37,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "id": "Htadzmjwu_Dh"
       },
@@ -46,7 +55,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+            "Some weights of the model checkpoint at bert-base-cased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight']\n",
             "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
             "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
             "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
@@ -63,7 +72,7 @@
       ],
       "source": [
         "tokenizer = BertTokenizer.from_pretrained('bert-base-cased')\n",
-        "model = BertForSequenceClassification.from_pretrained('bert-base-cased', num_labels=2, output_attentions=True)\n",
+        "model = BertForSequenceClassification.from_pretrained('bert-base-cased', num_labels=2)\n",
         "\n",
         "if torch.cuda.is_available() :\n",
         "  print(\"CUDA\")\n",
@@ -77,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {
         "id": "CjInRHDwyuUU"
       },
@@ -108,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {
         "id": "G_vc7qipA2S_"
       },
@@ -123,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 6,
       "metadata": {
         "id": "Ra3JtiuS1gNS"
       },
@@ -133,32 +142,32 @@
           "output_type": "stream",
           "text": [
             "                                                    text  label\n",
-            "0      Ellen Page has come out as a man according to ...      1\n",
-            "1      Ellen Page has come out as a meat according to...      1\n",
-            "2      Ellen Page has come out as a chowder according...      1\n",
-            "3      Ell$B (aYe has come out as a man accoTRinr to ...      1\n",
-            "4      Ellen Page has come out as a man according to ...      1\n",
+            "0      they're the shit, they want to control our cou...      1\n",
+            "1      they're the sNi%, they want to control our cou...      1\n",
+            "2      My son is such a silly monkey, he is always do...      1\n",
+            "3      My son is such a silly m9nkeU, he is always do...      1\n",
+            "4            I wish he would stay the fuck away from me!      1\n",
             "...                                                  ...    ...\n",
-            "39073                 Being b1tch is unnatural and wrong      0\n",
-            "39074                   Being ass is unnatural and wrong      0\n",
-            "39075                   hsing gay is unnatural and wrigg      0\n",
-            "39076                   Eein9 gay is unnatural and wrun9      0\n",
-            "39077                   Begjg gay is Dnnat&r*l and wrong      0\n",
+            "11006  The Leeds goalkeeper called Charlton\u0019s loanee ...      1\n",
+            "11007            I do not think that all whites are scum      1\n",
+            "11008            I do not think that all whites are sc&h      1\n",
+            "11009                              i love the word bitch      1\n",
+            "11010                              i love the word bOtVh      1\n",
             "\n",
-            "[39078 rows x 2 columns]\n",
-            "163\n"
+            "[11011 rows x 2 columns]\n",
+            "50\n"
           ]
         }
       ],
       "source": [
         "total_df = pd.read_csv('augmented_data/Dataset_aug_complex_6513_.csv', sep=',')\n",
-        "total_df.dropna(inplace=True)\n",
-        "total_df = total_df[[\"text\", \"label\"]]\n",
-        "total_df[\"label\"] = [1 if i == \"nothate\" else 0 for i in total_df[\"label\"]]\n",
-        "print(total_df)\n",
-        "total_dataset = TestDataset(total_df)\n",
-        "total_loader = DataLoader(total_dataset, batch_size=batch, shuffle=True)\n",
-        "max_len = 0\n",
+        "\n",
+        "new_text, new_labels = [], []\n",
+        "for idx, row in total_df.iterrows() :\n",
+        "    if len(tokenizer.encode(row['text'], add_special_tokens=True)) <= 50 :\n",
+        "        new_text.append(row['text'])\n",
+        "        new_labels.append(row['label'])\n",
+        "total_df = pd.DataFrame(zip(new_text, new_labels), columns=['text','label'])\n",
         "\n",
         "for text, _ in total_loader:\n",
         "    encoded_list = [tokenizer.encode(t, add_special_tokens=True) for t in text]\n",
@@ -170,17 +179,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1953 19539\n"
-          ]
-        }
-      ],
+      "outputs": [],
+      "source": [
+        "# new_text, new_labels = [], []\n",
+        "# for idx, row in total_df.iterrows() :\n",
+        "#     if len(tokenizer.encode(row['text'], add_special_tokens=True)) <= 50 :\n",
+        "#         new_text.append(row['text'])\n",
+        "#         new_labels.append(row['label'])\n",
+        "# total_df = pd.DataFrame(zip(new_text, new_labels), columns=['text','label'])\n",
+        "# print(total_df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "#Train Set\n",
         "test_df, train_df, _ = np.split(total_df, [int(test_rate*len(total_df)), int(test_rate*len(total_df) + train_rate*len(total_df))])\n",
@@ -193,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -201,27 +217,7 @@
         "id": "DkwtjS28yMRF",
         "outputId": "15bd3ae3-921f-4465-8a4b-50d99829748f"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/var/folders/kx/qy_c0smd4c14rc316r9rcq3m0000gn/T/ipykernel_70493/1009792008.py:21: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-            "  labels = torch.tensor(label)\n"
-          ]
-        },
-        {
-          "ename": "ValueError",
-          "evalue": "too many values to unpack (expected 2)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[1;32m/Users/cwwojin/Woojin/machinelearning/CS376_Final_Project/Test_2.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cwwojin/Woojin/machinelearning/CS376_Final_Project/Test_2.ipynb#ch0000011?line=20'>21</a>\u001b[0m labels \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(label)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cwwojin/Woojin/machinelearning/CS376_Final_Project/Test_2.ipynb#ch0000011?line=21'>22</a>\u001b[0m outputs \u001b[39m=\u001b[39m model(sample, labels\u001b[39m=\u001b[39mlabels, return_dict\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/cwwojin/Woojin/machinelearning/CS376_Final_Project/Test_2.ipynb#ch0000011?line=22'>23</a>\u001b[0m loss, logits \u001b[39m=\u001b[39m outputs\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cwwojin/Woojin/machinelearning/CS376_Final_Project/Test_2.ipynb#ch0000011?line=24'>25</a>\u001b[0m pred \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(F\u001b[39m.\u001b[39msoftmax(logits), dim\u001b[39m=\u001b[39mX)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/cwwojin/Woojin/machinelearning/CS376_Final_Project/Test_2.ipynb#ch0000011?line=25'>26</a>\u001b[0m correct \u001b[39m=\u001b[39m pred\u001b[39m.\u001b[39meq(labels)\n",
-            "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "optimizer = Adam(model.parameters(), lr=1e-6)\n",
         "\n",
@@ -297,64 +293,6 @@
         "    total_len += len(labels)\n",
         "\n",
         "print('Test accuracy: ', total_correct / total_len)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "class neuNet(nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super(neuNet,self).__init__()\n",
-        "        ## This is the number of hidden nodes in each layer (512)\n",
-        "        ## This is the linear layer (784 -> hidden_1)\n",
-        "        self.fc1 = nn.Linear(163, 768)\n",
-        "        ## This is also linear layer but (n_hidden -> hidden_2)\n",
-        "        self.fc2 = nn.Linear(768,1)\n",
-        "        #The dropout layer (p=0.2)\n",
-        "        self.dropout = nn.Dropout(0.3)\n",
-        "    \n",
-        "    def forward(self,x):\n",
-        "        x = x.view(-1,768)\n",
-        "        x = F.relu(self.fc1(x))\n",
-        "        x = self.droput(x)\n",
-        "        x = self.fc2(x)\n",
-        "        return x\n",
-        "\n",
-        "MLP_model = neuNet()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "class Feed_Forward_network(nn.Module):\n",
-        "  def __init__(self, dh, dff):\n",
-        "    super(Feed_Forward_network, self).__init__()\n",
-        "    self.linear1 = nn.Linear(dh, 1)\n",
-        "    # self.linear2 = nn.Linear(dff,1)\n",
-        "    self.final = nn.Linear(dh, 2)\n",
-        "  def forward(self, x, y, valid_length, word_index):\n",
-        "    #(Batch, Max_len, dh/emb_dim)\n",
-        "    out1 = self.linear1(x)\n",
-        "    out1 = F.relu(out1)\n",
-        "    print(\"out1: \", out1.shape)\n",
-        "    out_soft = masked_softmax(out1.transpose(1,2), valid_length)\n",
-        "    print(\"out_soft: \", out_soft.shape)\n",
-        "    out_weighted= x.mul(out_soft.transpose(1,2))\n",
-        "    print(\"out_weighted: \", out_weighted.shape)\n",
-        "    weighted_sum = torch.sum(out_weighted, axis=1)\n",
-        "    print(\"weighted_sum: \", weighted_sum.shape)\n",
-        "    logits = self.final(weighted_sum)\n",
-        "    fil_tgt = 1\n",
-        "    loss = F.nll_loss(F.log_softmax(logits,dim=-1), y, ignore_index = 0, reduction = 'none')\n",
-        "    loss = loss.sum().mean()\n",
-        "    preds = (torch.softmax(logits, dim=-1)).argmax(dim=-1)\n",
-        "    return preds, fil_tgt, loss"
       ]
     }
   ],
